gx_device_has_color() was changed 8 years ago in the deviceN commit (r2925), from just color_info.numcomponents > 1 to || (dev)->color_info.gray_index == GX_CINFO_COMP_NO_INDEX .

This has some unfortunate side-effect for continuous tone gray devices which
doesn't support transparency, such as a 8-bit gray X11 display, which goes
down the wrong code path. These are quite rare so it took 7 years for the bug
(bug 690428) to be seen.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11455 a1074d23-0009-0410-80fe-cf8c14f379e6